fix font and padding on wrapping

--- a/resources/nshift-style-override.css
+++ b/resources/nshift-style-override.css
@@ -25,8 +25,9 @@
   @font-face {
     font-family: 'Inter';
     font-weight: 600; /* Semibold */
-    src: url('fonts/Inter-Semibold.woff2') format('woff2'),
-         url('fonts/Inter-Semibold.woff') format('woff');
+    src: url('fonts/Inter-SemiBold.ttf') format('ttf'),
+         url('fonts/Inter-SemiBold.woff2') format('woff2'),
+         url('fonts/Inter-SemiBold.woff') format('woff');
   }
   
   @font-face {
@@ -46,6 +47,18 @@
         font-size: 16px;
         font-weight: 400;
         font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    body.toc2 {
+        padding-left: 22rem;
+    }
+}
+
+@media screen and (min-width: 1380px) {
+    body.toc2 {
+        padding-left: 20rem;
     }
 }
 
